implement desktop design

--- a/four-card-feature-section/css/style.css
+++ b/four-card-feature-section/css/style.css
@@ -1,3 +1,109 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+  background: hsl(0, 0%, 98%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+p {
+  color: hsl(229, 6%, 66%);
+  font-size: 15px;
+  font-weight: 200;
+  padding: 10px;
+}
+
+header {
+  max-width: 700px;
+  margin: 3rem;
+  text-align: center;
+}
+
+header h1 {
+  font-size: 2.8rem;
+  font-weight: 200;
+  padding: 0.2rem;
+  margin-top: 2.5rem;
+  color: hsl(229, 6%, 66%);
+}
+
+header h1 span {
+  font-weight: 600;
+  color: hsl(234, 12%, 34%);
+}
+
+header p {
+  font-size: 20px;
+}
+
+.box-section {
+  display: flex;
+  align-items: center;
+}
+
+.box-column {
+  flex-direction: column;
+}
+
+.box {
+  background: #fff;
+  border: 1px solid #ccc;
+  padding: 1.5rem;
+  margin: 1rem;
+  margin-top: 2;
+  width: 20rem;
+  height: 15rem;
+  border-radius: 0.4rem;
+  box-shadow: 2px 6px 10px 0px rgba(82,75,82,0.53);
+}
+
+.box h3 {
+  font-size: 1.3rem;
+  font-weight: 600;
+  color: hsl(234, 12%, 34%);
+  text-align: left;
+  padding-left: 10px;
+}
+
+.box p {
+  text-align: left;
+}
+
+.box img {
+  float: right;
+  margin-right: 5px;
+}
+
+.box-column #supervisor {
+  border-top: hsl(180, 62%, 55%) solid 5px;
+}
+
+.box-column #team-builder {
+  border-top: hsl(0, 78%, 62%) solid 5px;
+}
+
+.box-column #karma {
+  border-top: hsl(34, 97%, 64%) solid 5px;
+}
+
+.box-column #calculator {
+  border-top: hsl(212, 86%, 64%) solid 5px;
+}
+
+/* Footer */
+
+footer {
+  margin-top: 5rem;
+}
+
 .attribution {
   font-size: 11px; text-align: center;
 }
