improve mobile responsiveness

--- a/four-card-feature-section/css/mobile.css
+++ b/four-card-feature-section/css/mobile.css
@@ -1,7 +1,3 @@
-.box-section {
-  display: flex;
-  flex-direction: column;
-}
 
 header {
 	max-width: 90%;
@@ -10,9 +6,29 @@ header {
 }
 
 header h1 {
-	font-size: 1.3rem;
+	font-size: 25px;
+	font-weight: bold;
+	margin-bottom: 20px;
 }
 
 header p {
-	font-size: 13px;
+	font-size: 18px;
+}
+
+.box-section {
+  display: flex;
+  flex-direction: column;
+}
+
+.box {
+  width: 20rem;
+  height: 15rem;  
+}
+
+.box h3 {
+  font-size: 1.3rem;
+}
+
+.box p {
+  font-size: 18px;
 }
